Some tweaks to fix grammar and spacing

--- a/docs/style.css
+++ b/docs/style.css
@@ -36,6 +36,7 @@ body
 	padding-top: 5rem;
 	margin: 0;
 	font-size: 1.7rem;
+	line-height: 2.3rem;
 	font-family: "Libertinus Serif", serif;
 	color: #333;
 	width: 100vw;
